--- a/java/res/xml/rows_symbols.xml
+++ b/java/res/xml/rows_symbols.xml
@@ -31,6 +31,10 @@
         <include
             latin:keyboardLayout="@xml/rowkeys_symbols1" />
     </Row>
+    <switch>
+        <case latin:numberRow="true"> <Row /> </case>
+        <default> </default>
+    </switch>
     <Row
         latin:keyWidth="10%p"
     >
