--- a/java/res/xml/rows_armenian_phonetic.xml
+++ b/java/res/xml/rows_armenian_phonetic.xml
@@ -21,6 +21,7 @@
 <merge xmlns:latin="http://schemas.android.com/apk/res-auto">
     <include latin:keyboardLayout="@xml/key_styles_common" />
     <include latin:keyboardLayout="@xml/key_styles_currency" />
+    <include latin:keyboardLayout="@xml/row_number_switch" />
     <Row
         latin:keyWidth="10.0%p"
         latin:keyLabelFlags="fontNormal"
