--- a/java/res/xml/rows_bengali_akkhor.xml
+++ b/java/res/xml/rows_bengali_akkhor.xml
@@ -20,6 +20,7 @@
 
 <merge xmlns:latin="http://schemas.android.com/apk/res-auto" >
     <include latin:keyboardLayout="@xml/key_styles_common" />
+    <include latin:keyboardLayout="@xml/row_number_switch" />
     <Row
         latin:keyLabelFlags="fontNormal"
         latin:keyWidth="9.091%p" >
