--- a/java/res/xml/rows_bepo.xml
+++ b/java/res/xml/rows_bepo.xml
@@ -18,6 +18,7 @@
 >
     <include
         latin:keyboardLayout="@xml/key_styles_common" />
+    <include latin:keyboardLayout="@xml/row_number_switch" />
     <Row
         latin:keyWidth="10%p"
     >
