--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -68,9 +68,9 @@
     <string name="payment_failed_body">Unfortunately, your payment has failed for one reason or another. Please contact us if you need help. You can reach us at keyboard@futo.org, with the button below, or with Send Feedback in Help</string>
     <string name="payment_failed_body_ex">There may have been a problem with your payment. If it did go through, you should receive an email with a license key. Please contact us if you need help. You can reach us at keyboard@futo.org, with the button below, or with Share Feedback at the main screen.</string>
     <string name="pay_via_x">Pay via <xliff:g name="paymentMethod" example="Play Store">%s</xliff:g></string>
-    <string name="pay">Pay</string>
+    <string name="pay">Pay (about $4.99 + tax)</string>
     <string name="i_already_paid">I already paid</string>
-    <string name="i_already_paid_2">I already paid (tap again)</string>
+    <string name="i_already_paid_2">I already paid (tap again to confirm)</string>
     <string name="remind_me_in_x">"Remind me in "</string>
     <string name="in_x_days">" days"</string>
     <string name="developer_mode_payment_methods">You are on the Developer release, so you are seeing all payment methods</string>
