--- a/java/res/values/attrs.xml
+++ b/java/res/values/attrs.xml
@@ -327,6 +327,13 @@
         <attr name="keyHintLabel" format="string" />
         <!-- The vertical adjustment of key hint label in proportion to its height. -->
         <attr name="keyHintLabelVerticalAdjustment" format="fraction" />
+
+        <!-- Whether or not keyboard should use action drawables -->
+        <attr name="isAction" format="boolean" />
+
+        <!-- Whether or not keyboard should use moreKey drawables -->
+        <attr name="isMoreKey" format="boolean" />
+
         <!-- The key label flags. -->
         <attr name="keyLabelFlags" format="integer">
             <!-- This should be aligned with
@@ -420,6 +427,7 @@
         <!-- Color to use for the label in a key when in inactivated state. -->
         <attr name="keyTextInactivatedColor" format="color" />
         <attr name="keyPressedTextColor" format="color" />
+        <attr name="actionKeyTextColor" format="color" />
         <!-- Color to use for the label in a key that has followFunctionalTextColor keyLabelFlags. -->
         <attr name="functionalTextColor" format="color" />
         <!-- Key hint letter (= one character hint label) color -->
