--- a/java/res/xml/rowkeys_qwerty2_left5.xml
+++ b/java/res/xml/rowkeys_qwerty2_left5.xml
@@ -24,7 +24,7 @@
     <Key
         latin:keySpec="a"
         latin:keyHintLabel="\@"
-        latin:additionalMoreKeys="\\@"
+        latin:additionalMoreKeys="\\@,!icon/action_select_all|!code/action_select_all"
         latin:moreKeys="!text/morekeys_a" />
     <Key
         latin:keySpec="s"
