Create Python version of the make-keyboard-text tool
The Python version uses json files, separate from the xml files. Comments haven't been migrated still.

I'm still not very happy with the way the keyboard texts are managed and that it requires running a separate tool to generate a .java file. It's at least better than manually editing an autogenerated file as before, and python3 is more widely available than the archaic Android build system

--- a/tools/make-keyboard-text/res/values-pt/donottranslate-more-keys.xml
+++ b/tools/make-keyboard-text/res/values-pt/donottranslate-more-keys.xml
@@ -62,4 +62,6 @@
          U+010D: "č" LATIN SMALL LETTER C WITH CARON
          U+0107: "ć" LATIN SMALL LETTER C WITH ACUTE -->
     <string name="morekeys_c">&#x00E7;,&#x010D;,&#x0107;</string>
+
+    <string name="keyspec_spanish_row2_10">&#x00E7;</string>
 </resources>
