Update settings categories. Add option for customizing long-press key layout. Draw icon key hints
The texts for more keys have been updated:
* morekeys_a should now include only letters relevant to the active language
* morekeys_misc_a should include misc letters (accents, etc) not specifically needed for typing in the language

The above still needs to be applied to most other languages. Only QWERTY has been updated with the new morekeys system. Other layouts still need to be updated.

--- a/java/res/xml/key_styles_common.xml
+++ b/java/res/xml/key_styles_common.xml
@@ -42,7 +42,7 @@
     <key-style
         latin:styleName="baseForShiftKeyStyle"
         latin:keyActionFlags="noKeyPreview"
-        latin:keyLabelFlags="preserveCase"
+        latin:keyLabelFlags="preserveCase|disableKeyHintLabel"
         latin:moreKeys="!noPanelAutoMoreKey!, |!code/key_capslock" />
     <switch>
         <case
@@ -75,6 +75,7 @@
         latin:styleName="deleteKeyStyle"
         latin:keySpec="!icon/delete_key|!code/key_delete"
         latin:keyActionFlags="isRepeatable|noKeyPreview"
+        latin:keyLabelFlags="disableKeyHintLabel"
         latin:backgroundType="functional" />
     <!-- emojiKeyStyle must be defined before including @xml/key_syles_enter. -->
     <key-style
@@ -89,6 +90,7 @@
         latin:styleName="spaceKeyStyle"
         latin:keySpec="!icon/space_key|!code/key_space"
         latin:backgroundType="spacebar"
+        latin:keyLabelFlags="disableKeyHintLabel"
         latin:keyActionFlags="noKeyPreview|enableLongPress" />
     <!-- U+200C: ZERO WIDTH NON-JOINER
          U+200D: ZERO WIDTH JOINER -->
