--- a/java/res/xml/rowkeys_qwerty1_right5.xml
+++ b/java/res/xml/rowkeys_qwerty1_right5.xml
@@ -23,26 +23,17 @@
 >
     <Key
         latin:keySpec="!text/keyspec_y"
-        latin:keyHintLabel="6"
-        latin:additionalMoreKeys="6,!text/keyspec_right_square_bracket"
-        latin:moreKeys="!text/morekeys_y" />
+        latin:moreKeys="!text/morekeys_y,!text/qwertysyms_y,!text/number_6,!text/actions_y" />
     <Key
         latin:keySpec="u"
-        latin:keyHintLabel="7"
-        latin:additionalMoreKeys="7,!text/keyspec_less_than"
-        latin:moreKeys="!text/morekeys_u" />
+        latin:moreKeys="!text/morekeys_u,!text/morekeys_misc_u,!text/qwertysyms_u,!text/number_7,!text/actions_u" />
     <Key
         latin:keySpec="i"
-        latin:keyHintLabel="8"
-        latin:additionalMoreKeys="8,!text/keyspec_greater_than"
-        latin:moreKeys="!text/morekeys_i" />
+        latin:moreKeys="!text/morekeys_i,!text/morekeys_misc_i,!text/qwertysyms_i,!text/number_8,!text/actions_i" />
     <Key
         latin:keySpec="o"
-        latin:keyHintLabel="9"
-        latin:additionalMoreKeys="9,!text/keyspec_left_curly_bracket"
-        latin:moreKeys="!text/morekeys_o" />
+        latin:moreKeys="!text/morekeys_o,!text/morekeys_misc_o,!text/qwertysyms_o,!text/number_9,!text/actions_o" />
     <Key
         latin:keySpec="p"
-        latin:keyHintLabel="0"
-        latin:additionalMoreKeys="0,!text/keyspec_right_curly_bracket" />
+        latin:moreKeys="!text/morekeys_p,!text/qwertysyms_p,!text/number_0,!text/actions_p" />
 </merge>
