--- a/java/res/xml/rowkeys_kurdish3.xml
+++ b/java/res/xml/rowkeys_kurdish3.xml
@@ -19,7 +19,10 @@
 -->
 
 <merge xmlns:latin="http://schemas.android.com/apk/res-auto">
-
+    <switch>
+    <case
+        latin:keyboardLayoutSetElement="alphabet|alphabetAutomaticShifted|alphabetShiftLocked"
+        >
     <!-- U+0632: "ز" ARABIC LETTER Z
          U+0636: "ض" ARABIC LETTER THAD   -->
     <Key latin:keySpec="&#x0632;"
@@ -56,5 +59,53 @@
     <Key
         latin:keySpec="&#x0645;"
         latin:moreKeys="&#x0640;" />
+    </case>
+        <default>
+        <!-- swap keyspec with morekeys -->
+            <!-- U+0636: "ض" ARABIC LETTER THAD
+                 U+0632: "ز" ARABIC LETTER Z    -->
+            <Key latin:keySpec="&#x0636;"
+                latin:moreKeys="&#x0632;"
+                />
+            <!-- U+0635: "ص" ARABIC LETTER THAD
+                 U+062E: "خ" ARABIC LETTER XA
+            -->
+            <Key latin:keySpec="&#x0635;"
+                 latin:moreKeys="&#x062E;"
+                />
+            <!-- U+0686: "چ" KURDISH LETTER CH
+                 U+062C: "ج" ARABIC LETTER JIM -->
+            <Key latin:keySpec="&#x0686;"
+                latin:moreKeys="&#x062C;" />
+
+            <!-- U+0638: "ظ" ARABIC LETTER THA
+                 U+06A4: "ڤ" KURDISH LETTER V -->
+            <Key
+                latin:keySpec="&#x0638;"
+                latin:moreKeys="&#x06A4;"
+                />
+            <!-- U+0649: "ى" ARABIC LETTER YA
+                 U+0628: "ب" ARABIC LETTER BA
+            -->
+            <Key latin:keySpec="&#x0649;"
+                latin:moreKeys="&#x0628;"/>
+            <!-- U+0648: "ة" ARABIC LETTER TA
+                 U+0646: "ن" ARABIC LETTER NUN
+            -->
+            <Key latin:keySpec="&#x0648;"
+                latin:moreKeys="&#x0646;"/>
+            <!-- U+0640: "-" SYMBOL Dash
+                 U+0645: "م" ARABIC LETTER MEEM -->
+            <Key
+                latin:keySpec="&#x0640;"
+                latin:moreKeys="&#x0645;"
+                />
+
+
+
+
+
+        </default>
+    </switch>
 
 </merge>
