--- a/java/res/xml/rows_kurdish.xml
+++ b/java/res/xml/rows_kurdish.xml
@@ -20,7 +20,7 @@
 
 <merge xmlns:latin="http://schemas.android.com/apk/res-auto">
     <include latin:keyboardLayout="@xml/key_styles_common" />
-    <include latin:keyboardLayout="@xml/row_number_switch" />
+    <include latin:keyboardLayout="@xml/row_number_arabic_switch" />
     <Row
         latin:keyWidth="10%p"
         latin:keyLabelFlags="fontNormal"
@@ -36,12 +36,15 @@
 
     </Row>
     <Row
-        latin:keyWidth="11%p"
+        latin:keyWidth="10%p"
         latin:keyLabelFlags="fontNormal"
     >
-
+        <Key
+            latin:keyStyle="shiftKeyStyle"
+            latin:keyWidth="15%p"
+            latin:visualInsetsRight="1%p" />
         <include latin:keyboardLayout="@xml/rowkeys_kurdish3"
-            latin:keyXPos="10%p"/>
+           />
         <Key
             latin:keyStyle="deleteKeyStyle"
             latin:keyWidth="fillRight"
